--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.take_me_home">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,22 +15,29 @@
         android:theme="@style/Theme.Take_me_home"
         tools:targetApi="31">
         <activity
+            android:name=".student"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".student"
+            android:name=".infoforowner"
             android:exported="false" />
         <activity
             android:name=".Signup"
             android:exported="false" />
         <activity
-            android:name=".Owner"
+            android:name=".S_signup"
             android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="false" />
         <activity
-            android:name=".S_signup"
+            android:name=".Owner"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
